[package]
name = "oinq"
version = "0.12.0"
edition = "2021"
rust-version = "1.69"
description = "The inter-agent communication protocol in the REview ecosystem"
readme = "README.md"
homepage = "https://github.com/petabi/oinq"
repository = "https://github.com/petabi/oinq"
license = "Apache-2.0"

[dependencies]
bincode = "1"
futures = "0.3"
num_enum = "0.7"
quinn = "0.11"
quinn-proto = "0.10"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = "1"

[dev-dependencies]
futures = "0.3"
lazy_static = "1"
rcgen = "0.12"
rustls = "0.21"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
