[package]
name = "oinq"
version = "0.13.0"
edition = "2024"
rust-version = "1.85"
description = "The inter-agent communication protocol in the REview ecosystem"
readme = "README.md"
homepage = "https://github.com/petabi/oinq"
repository = "https://github.com/petabi/oinq"
license = "Apache-2.0"

[dependencies]
bincode = { version = "2", features = ["serde"] }
futures = "0.3"
num_enum = "0.7"
quinn = "0.11"
quinn-proto = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = "1"

[dev-dependencies]
futures = "0.3"
quinn = { version = "0.11", features = ["ring"] }
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
